# MPC_API

./: .gitignore  Cargo.toml  EXAMPLES_STATUS.md  README.md  README_NETWORK.md  debug_ecdsa
benches/: README.md  mpc_benchmarks.rs  simple_benchmarks.rs
examples/: README.md  advanced_protocols_guide.rs  advanced_shamir_demo.rs  basic_functionality_demo.rs  beaver_triples_bfv_example.rs  beaver_triples_ole_example.rs  beaver_triples_trusted_party_example.rs  complete_api_usage_guide.rs  complete_api_usage_guide_simplified.rs  complete_api_usage_guide_working.rs  comprehensive_beaver_examples.rs  documentation_examples.rs  fixed_api_usage_guide.rs  main.rs  mpc_network_demo.rs  network_example.rs  network_secret_sharing_demo.rs  practical_usage_examples.rs  seeded_coordinate_demo.rs  simple_api_usage.rs  simple_network_demo.rs  working_advanced_protocols.rs  working_api_examples.rs  working_simplified_examples.rs
src/: lib.rs
src/authentication/: cmac.rs  gmac.rs  hmac.rs  mod.rs  poly1305.rs
src/beaver_triples/: bfv_based.rs  mod.rs  ole_based.rs  protocol_messages.rs  threshold_keygen.rs  trusted_party.rs  two_party_ole.rs
src/commitment/: hash_commit.rs  merkle_tree.rs  mod.rs  pedersen.rs
src/elliptic_curve/: curve25519.rs  ecdh.rs  ecdsa.rs  mod.rs  point.rs  scalar.rs  secp256k1.rs
src/garbled_circuits/: circuit.rs  evaluator.rs  free_xor.rs  garbler.rs  gate.rs  mod.rs  wire.rs
src/homomorphic_encryption/: bfv.rs  bgv.rs  elgamal.rs  mod.rs  paillier.rs  rsa.rs
src/network/: README.md  common.rs  http.rs  mod.rs  p2p.rs  protocol.rs  security.rs  tests.rs
src/oblivious_transfer/: basic_ot.rs  correlated_ot.rs  mod.rs  naor_pinkas.rs  ole.rs  ot_extension.rs  random_ot.rs  vole.rs
src/protocols/: coin_flipping.rs  mod.rs
src/secret_sharing/: README.md  additive.rs  mod.rs  replicated.rs  shamir.rs
src/security/: mod.rs
src/spdz/: mod.rs  share.rs
src/utils/: math.rs  memory.rs  mod.rs  random.rs  serialization.rs
src/zero_knowledge/: mod.rs
tests/: authentication_tests.rs  bfv_based_tests.rs  commitment_tests.rs  elliptic_curve_tests.rs  error_handling_tests.rs  examples_tests.rs  garbled_circuits_tests.rs  homomorphic_encryption_tests.rs  integration_tests.rs  network_secret_sharing_integration_tests.rs  network_tests.rs  oblivious_transfer_tests.rs  ole_based_tests.rs  protocol_messages_tests.rs  protocols_tests.rs  secret_sharing_tests.rs  security_tests.rs  spdz_tests.rs  threshold_keygen_tests.rs  trusted_party_tests.rs  two_party_ole_tests.rs  utils_tests.rs
